@@ -4,7 +4,8 @@ zeit.content.video changes
 2.3.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Only automatically publish playlists, not any object referencing a video
+  (BUG-235).
 
 
 2.3.2 (2015-02-20)
